chapter13/tls-demo/demo/ingress-demo01.yaml
apiVersion: networking.k8s.io/v1  #v1版本组
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: www.ik8s.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demoapp-deploy
            port: 
             number: 80
  tls:
  - hosts:
    - www.ik8s.io
    secretName: ik8s-tls
